<resources>
    <string name="app_name">Twitter</string>
    <string name="signin">SIGN IN</string>
    <string name="signinLink">Sign in</string>
    <string name="signinHint">Already a member?</string>
    <string name="username">Email</string>
    <string name="username_summary">Your signed in Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="password_summary">.........</string>
    <string name="register">REGISTER</string>
    <string name="registerLink">Register Now</string>
    <string name="registerHint">Not a member?</string>

    <string name="action_search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="app_home">Home</string>
    <string name="view_posts">View Posts</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search for users</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_user">No such user found</string>

    <string name="sample_user">Sample User</string>
    <string name="sample_post">This is a sample post</string>
    <string name="comment">Comment</string>
    <string name="new_post">Whats on your Mind?</string>
    <string name="add_comment">Add Comment</string>
    <string name="new_comment">Write your comment</string>

</resources>
