<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/darkBrown"
android:fitsSystemWindows="true"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingBottom="0dp"
android:paddingLeft="0dp"
android:paddingRight="0dp"
android:paddingTop="0dp"
tools:context="com.iitb.nihhaar.twitter.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="133dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:minWidth="280dp"
        android:paddingBottom="15px"
        android:paddingLeft="30px"
        android:paddingRight="15px"
        android:paddingTop="15px"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:minWidth="280dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_ripple"
        android:minHeight="50dp"
        android:minWidth="280dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/signin"
        android:textColor="#fff" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:text="@string/registerHint"
        android:textColor="@color/textHint"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:text="@string/registerLink"
        android:textColor="@color/text"
        android:textSize="15sp"/>

</LinearLayout>

</LinearLayout>
