<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <!-- android:background doesn't work for card view -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:cardBackgroundColor="@color/darkBrownIndent"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="0dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/postuser"
                android:text="@string/sample_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@color/dark_white"
                android:padding="10dp" />

            <TextView
                android:id="@+id/posttext"
                android:text="@string/sample_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/darker_white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkBrown"/>

            <TextView
                android:id="@+id/comment"
                android:text="@string/comment"
                android:drawableLeft="@drawable/ic_action_chat_bubble"
                android:textColor="@color/text"
                android:drawableTint="@color/text"
                android:drawablePadding="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkBrown"/>

            <com.iitb.nihhaar.twitter.CustomLinearLayout
                android:id="@+id/commentView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>